--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
         </section>
 
         <button id="save" data-i18n="save">Guardar</button>
+        <button id="exportExcel" data-i18n="exportExcel">Exportar a Excel</button>
         <footer data-i18n="footer">Datos almacenados en localStorage del navegador</footer>
     </div>
 
+    <script src="https://cdn.sheetjs.com/xlsx-0.19.2/package/dist/xlsx.full.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
