Add IBI and tenant insurance fields

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <section id="community" class="tab-section">
             <h2 data-i18n="communitySection">Comunidad de Propietarios</h2>
             <label data-i18n="communityFee">Cuota<input type="number" id="communityFee"></label>
+            <label data-i18n="ibi">IBI<input type="number" id="ibi"></label>
             <label data-i18n="communityManager">Administrador<input type="text" id="communityManager"></label>
             <label data-i18n="communityContact">Contacto<input type="text" id="communityContact"></label>
             <label data-i18n="communityMinutes">Últimas Actas<textarea id="communityMinutes"></textarea></label>
@@ -101,7 +102,8 @@
             <label data-i18n="insuranceCompany">Compañía<input type="text" id="insuranceCompany"></label>
             <label data-i18n="insurancePolicy">Póliza<input type="text" id="insurancePolicy"></label>
             <label data-i18n="insuranceCoverage">Coberturas<textarea id="insuranceCoverage"></textarea></label>
-            <label data-i18n="insurancePremium">Prima Anual<input type="number" id="insurancePremium"></label>
+            <label data-i18n="insurancePremium">Seguro Hogar<input type="number" id="insurancePremium"></label>
+            <label data-i18n="tenantInsurance">Seguro Inquilino<input type="number" id="tenantInsurance"></label>
             <label data-i18n="insuranceRenewal">Renovación<input type="date" id="insuranceRenewal"></label>
         </section>
 
