Add brand name and remove floor plan field

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 data-i18n="title">Gestión de Propiedades</h1>
+            <h1><span class="brand">MIMOSAPE</span> <span data-i18n="title">Gestión de Propiedades</span></h1>
             <div class="controls">
                 <select id="language">
                     <option value="es">ES</option>
@@ -43,7 +43,6 @@
             <label data-i18n="purchasePrice">Precio de Compra<input type="number" id="purchasePrice"></label>
             <label data-i18n="rooms">Número de Habitaciones<input type="number" id="rooms"></label>
             <label data-i18n="description">Descripción<textarea id="description"></textarea></label>
-            <label data-i18n="floorPlan">Plano (URL de la imagen)<input type="text" id="floorPlan"></label>
             <label data-i18n="observations">ITE/Observaciones<textarea id="observations"></textarea></label>
         </section>
 
