feat: allow photo upload per property

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 
         <button id="save" data-i18n="save">Guardar</button>
         <button id="exportExcel" data-i18n="exportExcel">Exportar a Excel</button>
+        <button id="uploadPhotos" data-i18n="uploadPhotos">Subir Fotos</button>
+        <input type="file" id="photoInput" accept="image/*" multiple style="display:none">
+        <div id="photos"></div>
         <footer data-i18n="footer">Datos almacenados en localStorage del navegador</footer>
     </div>
 
